fix nav spacing

--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -14,7 +14,7 @@
   align-items: stretch;
 
   .navbar-nav {
-    padding-top: 0.25rem;
+    // padding-top: 0.25rem;
 
     // à refactoriser
     .nav-link:hover:not(.active) {
